--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bootsrap!</title>
+    <title>Manifold Calibration</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
-        <h1>Bootsrap!</h1>
+        <h1>Manifold Calibration</h1>
         <form id="filter-form">
             <div class="form-group">
                 <label for="filter">Filter:</label>
@@ -34,15 +34,47 @@
             .then(response => response.json())
             .then(data => {
                 // Use Plotly to create and update the graph
-                var trace = {
-                    x: data.x,
-                    y: data.y,
-                    type: 'scatter'
-                };
+                var traces = [
+                    {
+                        x: data.x,
+                        y: data.y,
+                        name: 'Actual Calibration',
+                        type: 'scatter',
+                        mode: 'markers',
+                        marker: {
+                            color: 'rgb(227, 119, 194)',
+                            size: 10,
+                        },
+                    },{
+                        x: [0, 1],
+                        y: [0, 1],
+                        name: 'Perfect Calibration',
+                        type: 'lines',
+                        mode: 'line',
+                        line: {
+                        color: 'rgb(127, 127, 127)',
+                        width: 1,
+                        },
+                    }
+                ];
                 var layout = {
-                    title: 'My Graph'
+                    title: 'Calibration Plot',
+                    xaxis: {
+                        title: 'Probability at Close',
+                        range: [0, 1],
+                        tickformat: ',.0%',
+                    },
+                    yaxis: {
+                        title: 'Average Resolution',
+                        range: [0, 1],
+                        tickformat: ',.0%',
+                    },
+                    height: 500,
+                    margin: { l: 60, r: 40, t: 60, b: 40 },
+                    showlegend: false,
                 };
-                Plotly.newPlot('graph', [trace], layout);
+                const config = { responsive: true }
+                Plotly.newPlot('graph', traces, layout, config);
             });
         });
     </script>
