data download, plot on load

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Manifold Calibration</h1>
+        <div id="graph"></div>
+        <br />
         <form id="filter-form">
             <div class="form-group">
                 <label for="filter">Filter:</label>
@@ -16,7 +17,6 @@
             </div>
             <button type="submit" class="btn btn-primary">Apply Filter</button>
         </form>
-        <div id="graph"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -33,50 +33,67 @@
             })
             .then(response => response.json())
             .then(data => {
-                // Use Plotly to create and update the graph
-                var traces = [
-                    {
-                        x: data.x,
-                        y: data.y,
-                        name: 'Actual Calibration',
-                        type: 'scatter',
-                        mode: 'markers',
-                        marker: {
-                            color: 'rgb(227, 119, 194)',
-                            size: 10,
-                        },
-                    },{
-                        x: [0, 1],
-                        y: [0, 1],
-                        name: 'Perfect Calibration',
-                        type: 'lines',
-                        mode: 'line',
-                        line: {
-                        color: 'rgb(127, 127, 127)',
-                        width: 1,
-                        },
-                    }
-                ];
-                var layout = {
-                    title: 'Calibration Plot',
-                    xaxis: {
-                        title: 'Probability at Close',
-                        range: [0, 1],
-                        tickformat: ',.0%',
-                    },
-                    yaxis: {
-                        title: 'Average Resolution',
-                        range: [0, 1],
-                        tickformat: ',.0%',
-                    },
-                    height: 500,
-                    margin: { l: 60, r: 40, t: 60, b: 40 },
-                    showlegend: false,
-                };
-                const config = { responsive: true }
-                Plotly.newPlot('graph', traces, layout, config);
+                updateGraph(data)
             });
         });
+
+        document.addEventListener('DOMContentLoaded', function() {
+            fetch('/get_data', {
+                method: 'POST',
+                body: new URLSearchParams({
+                    'filter': 'default'
+                })
+            })
+            .then(response => response.json())
+            .then(data => {
+                updateGraph(data)
+            });
+        });
+
+        function updateGraph(data) {
+            // Use Plotly to create and update the graph
+            var traces = [
+                {
+                    x: data.x,
+                    y: data.y,
+                    name: 'Actual Calibration',
+                    type: 'scatter',
+                    mode: 'markers',
+                    marker: {
+                        color: 'rgb(227, 119, 194)',
+                        size: 10,
+                    },
+                },{
+                    x: [0, 1],
+                    y: [0, 1],
+                    name: 'Perfect Calibration',
+                    type: 'lines',
+                    mode: 'line',
+                    line: {
+                    color: 'rgb(127, 127, 127)',
+                    width: 1,
+                    },
+                }
+            ];
+            var layout = {
+                title: 'Calibration Plot',
+                xaxis: {
+                    title: 'Probability at Close',
+                    range: [0, 1],
+                    tickformat: ',.0%',
+                },
+                yaxis: {
+                    title: 'Average Resolution',
+                    range: [0, 1],
+                    tickformat: ',.0%',
+                },
+                height: 500,
+                margin: { l: 60, r: 40, t: 60, b: 40 },
+                showlegend: false,
+            };
+            const config = { responsive: true }
+            Plotly.newPlot('graph', traces, layout, config);
+        }
     </script>
 </body>
 </html>
