--- a/templates/manifold.html
+++ b/templates/manifold.html
@@ -23,6 +23,19 @@
                 </div>
             </div>
             <div class="field">
+                <label class="label" for="xbin_size">X-Axis Bin Size</label>
+                <div class="control">
+                    <select name="xbin_size" id="xbin_size">
+                        <option value="0.005">0.5%</option>
+                        <option value="0.010">1.0%</option>
+                        <option value="0.025">2.5%</option>
+                        <option value="0.050">5.0%</option>
+                        <option value="0.075">7.5%</option>
+                        <option value="0.100">10%</option>
+                    </select>
+                </div>
+            </div>
+            <div class="field">
                 <label class="label" for="ybin_modifier">Y-Axis Bin Weighting</label>
                 <div class="control">
                     <select name="ybin_modifier" id="ybin_modifier">
